--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,140 @@
+acme==3.0.1
+anyio==4.6.2.post1
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+async-lru==2.0.4
+attrs==24.2.0
+babel==2.16.0
+backcall==0.2.0
+bcrypt==4.2.0
+beautifulsoup4==4.12.3
+bleach==6.2.0
+blinker==1.9.0
+branca==0.8.0
+certbot==3.0.1
+certbot-dns-rfc2136==3.0.1
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.7
+colorama==0.4.6
+comm==0.2.2
+ConfigArgParse==1.7
+configobj==5.0.9
+cryptography==44.0.0
+debugpy==1.8.8
+decorator==5.1.1
+defusedxml==0.7.1
+distro==1.9.0
+dnspython==2.7.0
+docopt==0.6.2
+et_xmlfile==2.0.0
+exceptiongroup==1.2.2
+executing==2.1.0
+fastjsonschema==2.20.0
 Flask==2.2.5
-Flask_Bcrypt==1.0.1
-Flask_Login==0.6.3
-flask_sqlalchemy==3.1.1
-Flask_WTF==1.0.0
+Flask-Admin==1.6.1
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+folium==0.18.0
+fqdn==1.5.1
+greenlet==3.2.4
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.27.2
+idna==3.10
+iniconfig==2.0.0
+ipykernel==6.29.5
+ipython==8.12.3
+isoduration==20.11.0
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.4
+josepy==1.14.0
+json5==0.9.28
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.6
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+MarkupSafe==2.1.5
+matplotlib-inline==0.1.7
+mistune==3.0.2
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+notebook==7.2.2
+notebook_shim==0.2.4
+numpy==2.1.2
+openpyxl==3.1.5
+overrides==7.7.0
+packaging==24.1
 pandas==2.2.3
+pandocfilters==1.5.1
+parsedatetime==2.6
+parso==0.8.4
+pickleshare==0.7.5
+pipreqs==0.5.0
+platformdirs==4.3.6
+pluggy==1.5.0
+prometheus_client==0.21.0
+prompt_toolkit==3.0.48
 psutil==6.1.0
 psycopg2==2.9.3
+pure_eval==0.2.3
+pycparser==2.22
+Pygments==2.18.0
+pyOpenSSL==24.3.0
+pyRFC3339==2.0.1
+pytest==8.3.3
+pytest-mock==3.14.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-Werkzeug==2.2.2
-WTForms==3.0.0
+python-json-logger==2.0.7
+pytz==2024.2
+pywin32==308
+pywinpty==2.0.14
+PyYAML==6.0.2
+pyzmq==26.2.0
+referencing==0.35.1
+requests==2.32.3
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.21.0
+Send2Trash==1.8.3
+six==1.16.0
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.43
+stack-data==0.6.3
+terminado==0.18.1
+tinycss2==1.4.0
+tomli==2.0.2
+tornado==6.4.1
+traitlets==5.14.3
+types-python-dateutil==2.9.0.20241003
+typing_extensions==4.12.2
+tzdata==2024.2
+uri-template==1.3.0
+urllib3==2.2.3
+waitress==3.0.0
+wcwidth==0.2.13
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+Werkzeug==2.2.3
+WTForms==3.1.2
+xyzservices==2024.9.0
+yarg==0.1.9
