--- a/requirements.txt
+++ b/requirements.txt
@@ -91,7 +91,7 @@ pluggy==1.5.0
 prometheus_client==0.21.0
 prompt_toolkit==3.0.48
 psutil==6.1.0
-psycopg2-binary==2.9.9
+psycopg2==2.9.9
 pure_eval==0.2.3
 pycparser==2.22
 Pygments==2.18.0
